# htsget-indexer

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2019-11-25-115919_create_htsget_blocks/: down.sql  up.sql
migrations/2019-11-25-115919_create_htsget_blocks/src/: schema.rs
src/: alignment.rs  errors.rs  indexer.rs  lib.rs  main.rs  parquet_utils.rs  reader.rs  schemas.rs  store.rs
src/data/: adam.rs  mod.rs  schemas.rs  voffsets.rs
src/db/: models.rs
src/store/: csv.rs  db.rs  json.rs  mod.rs  models.rs  schema.rs
src/store/database/: models.rs  schema.rs
tests/data/: htsnexus_test_NA12878.parquet  one_read.json
