[package]
name = "htsget-indexer"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
serde_json = "1.0.41"
async-std = "0.99.12"
parquet = "0.15.1"
parquet_derive = { git = "https://github.com/ccakes/parquet_derive.git" }
theban_interval_tree = "0.7.1"
rust-htslib = "0.26.0"
snafu = "0.6.0"