[package]
name = "htsget-indexer"
version = "0.1.0"
authors = [
  "Roman Valls Guimera <brainstorm@nopcode.org>",
  "Christian Perez Llamas",
]
edition = "2018"

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
snafu = "0.6.0"
rust-htslib = "0.26.0"

serde = { version = "1.0.102", features = ["derive"], optional = true }
serde_json = { version = "1.0.41", optional = true }
diesel = { version = "1.4.3", features = ["postgres"], optional = true }
dotenv = "0.15.0"

[features]
default = ["database"]

json = ["serde", "serde_json"]
csv = []
database = ["diesel"]